Ability to send message to multiple webhooks